fixed overflow

--- a/studio/src/App.css
+++ b/studio/src/App.css
@@ -15,6 +15,7 @@ body {
   align-items: center;
   justify-content: center;
   background: radial-gradient(circle at center, #ffe6ea, #d1f2eb);
+  overflow: hidden;
 }
 
 #content {
